--- a/styles/style.css
+++ b/styles/style.css
@@ -7,3 +7,13 @@ body {
 img {
     width: 35%;
  }
+
+ h5 {
+     text-align: center;
+ }
+ 
+.container-fluid {
+     color: white;
+     font-size: 25px;
+     text-align: center;
+ }
