added a sticky footer to each html page and font awesome style refrence to index.html and portfolio.html. sticky footer tags are semantic

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ img {
      text-align: center;
  }
  
-.container-fluid {
+.navbar fixed-bottom {
      color: white;
      font-size: 25px;
      text-align: center;
