added to portofolio, links for all projects

--- a/styles/style.css
+++ b/styles/style.css
@@ -52,3 +52,12 @@ h5 {
     display: block;
     height: 50%;
 }
+
+.img-overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
