--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,13 @@ h5 {
     margin-top: 10px;
 }
 
+/*about me card*/
+
+#about{
+    width: 750px; 
+    margin-left: auto; 
+    margin-right: auto; 
+}
 
  /*Portfolio Images and Buttons*/
 .img-wrapper {
@@ -51,13 +58,4 @@ h5 {
     content: ' ';
     display: block;
     height: 50%;
-}
-
-.img-overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    text-align: center;
 }
